fix: make menu background stretching (header)

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -16,34 +16,34 @@
 
 .header__main-container {
   margin: 0 auto;
-  position: relative; // для кнопки меню и самого выпадающего меню
+  position: relative; // для кнопки
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 
   @media (max-width: $mobile-width-max) {
     width: $mobile-content-width;
-    display: flex;
     flex-direction: column;
     align-items: flex-end;
-    gap: 8px;
+    gap: 15px;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     width: $tablet-content-width;
-    display: flex;
-    align-items: center;
     justify-content: flex-end;
-    gap: 64px;
+    gap: 25px;
   }
 
   @media (min-width: $desktop-width-min) {
     width: $desktop-content-width;
-    display: flex;
-    align-items: center;
     justify-content: space-between;
+    gap: 25px;
   }
 }
 
 .header__navigation {
   font-weight: 700;
+  background-color: $extra-color;
 
   @media (max-width: $mobile-width-max) {
     font-size: 14px;
@@ -60,9 +60,14 @@
   }
 
   @media (min-width: $desktop-width-min) {
+    position: absolute;
+    top: 54px;
+    left: 0;
+    width: 100%;
     font-weight: 400;
     font-size: 16px;
     font-size: 16px;
+    background-color: transparent;
   }
 }
 
@@ -108,48 +113,51 @@
 }
 
 .header__navigation-list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 100%;
-    z-index: 2;
-    background-color: $extra-color;
-    color: $basic-light-color;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100%;
+  z-index: 2;
+  background-color: $extra-color;
+  color: $basic-light-color;
 
-    @media (max-width: $mobile-width-max) {
-      display: none;
-      gap: 22px;
-      padding-top: 15px;
-      padding-bottom: 50px;
-    }
-
-    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-      display: none;
-      gap: 26px;
-      padding-top: 50px;
-      padding-bottom: 70px;
-    }
-
-    @media (min-width: $desktop-width-min) {
-      margin-left: 15px;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: flex-start;
-      gap: 16px;
-    }
-}
-
-.header__navigation-item {
-  @media (max-width: $tablet-width-max) {
-    margin-left: 10px;
+  @media (max-width: $mobile-width-max) {
+    display: none;
+    width: $mobile-content-width;
+    gap: 22px;
+    padding-top: 15px;
+    padding-bottom: 50px;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    margin-left: 39px;
+    display: none;
+    width: $tablet-content-width;
+    gap: 26px;
+    padding-top: 50px;
+    padding-bottom: 70px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    width: 631px;
+    margin: 0 auto;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 16px;
+  }
+}
+
+.header__navigation-item {
+  margin-left: -6px;
+}
+
+.header__navigation-item:first-child {
+  @media (min-width: $desktop-width-min) {
+    padding-left: 52px;
   }
 }
 
@@ -177,24 +185,26 @@
   }
 }
 
-.header__navigation--opened .header__toggle {
+.header__toggle--opened.header__toggle {
   transform: rotate(-45deg);
   width: 26px;
 }
 
-.header__navigation--opened .header__toggle::after {
+.header__toggle--opened.header__toggle::after {
   transform: rotate(90deg);
   top: 0;
 }
 
-.header__navigation--opened .header__toggle::before {
+.header__toggle--opened.header__toggle::before {
   display: none;
 }
 
-.header__navigation--opened .header__navigation-list {
+.header__navigation--opened.header__navigation {
   display: flex;
   position: absolute;
   left: 0;
+  z-index: 2;
+  width: 100%;
 
   @media (max-width: $mobile-width-max) {
     top: 100px;
@@ -205,36 +215,27 @@
   }
 }
 
-.header__links-container {
+.header__navigation--opened .header__navigation-list {
+  display: flex;
+  margin: 0 auto;
+
   @media (max-width: $mobile-width-max) {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    gap: 15px;
-    width: 150px;
-    margin-left: auto;
+    width: $mobile-content-width;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 410px;
-    margin-left: auto;
-  }
-
-  @media (min-width: $desktop-width-min) {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: $desktop-content-width;
+    width: $tablet-content-width;
   }
 }
 
 .header__logo-link {
   line-height: 100%;
   height: 42px;
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    width: 250px;
+    text-align: center;
+  }
 
   @media (min-width: $desktop-width-min) {
     margin-left: 32px;
@@ -257,12 +258,15 @@
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    width: 189px;
+    text-align: right;
     margin-top: 2px;
     font-size: 16px;
     line-height: 16px;
   }
 
   @media (min-width: $desktop-width-min) {
+    width: 157px;
     font-size: 18px;
     line-height: 18px;
   }
