--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -2,3 +2,7 @@
   margin: 0;
   min-height: 100%;
 }
+
+.page-body--navigation-opened {
+  overflow: hidden;
+}
